Adding optional column for extra information

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -224,6 +224,21 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <label class="col-sm-5 control-label">
+                                    $T('Glitter-showExtraColumn')<br />
+                                    <span class="label label-warning">&gt; 1200 pixels</span>
+                                </label>
+                                <div class="col-sm-4">
+                                    <select name="general-extra-column" class="form-control" data-bind="value: extraColumn">
+                                        <option value="">$T('none')</option>
+                                        <option value="category">$T('category')</option>
+                                        <option value="priority">$T('priority')</option>
+                                        <option value="processing">$T('swtag-pp')</option>
+                                        <option value="scripts">$T('eoq-scripts')</option>
+                                    </select>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
