Making the logo a link to reload the page

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -51,8 +51,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <img src="./static/images/logo.png" width="120" height="45" alt="" id="navbar-logo-big" />
-                    <img src="./static/images/logo-small.png" width="45" height="45" alt="" id="navbar-logo-small" />
+                    <a href="./">
+                        <img src="./static/images/logo.png" width="120" height="45" alt="" id="navbar-logo-big" />
+                        <img src="./static/images/logo-small.png" width="45" height="45" alt="" id="navbar-logo-small" />
+                    </a>
 
                     <div class="btn-group">
                         <div class="btn-group">
