Fix access issue with folder browser.
Folder browsers should use TAPI calls instead of API calls.
Would fail when a username/password is set, while API-key disabled.
Solves #353

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -47,8 +47,8 @@
         \$.Browser = {
             defaults: {
                 title:             'Choose Directory',
-                url:               '${root}api?mode=browse&output=json&apikey=$session',
-                autocompleteURL:   '${root}api?mode=browse&output=json&compact=1&apikey=$session'
+                url:               '${root}tapi?mode=browse&output=json&apikey=$session',
+                autocompleteURL:   '${root}tapi?mode=browse&output=json&compact=1&apikey=$session'
             }
         };
         var config_pane = "$pane";
